llvm-toolchain-3.3 (1:3.3-14) unstable; urgency=low

  * Port LLVM to mips64el. Thanks to YunQiang Su
    (Closes: #730808)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 30 Nov 2013 12:32:29 +0100

llvm-toolchain-3.3 (1:3.3-13) unstable; urgency=low

  * Standards-Version update to 3.9.5
  * Also install clang 3.3 examples (clang-3.3-examples) (Closes: #728260)
  * Move c-index-test* from llvm-3.3 => clang-3.3. It was triggering an
    unnecessary dependency from llvm-3.3 to libclang

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 04 Nov 2013 13:34:47 +0100

llvm-toolchain-3.3 (1:3.3-12) unstable; urgency=low

  * Update of the clang descriptions (Closes: #727684)
  * The package wasn't cleaned correctly (Closes: #722155)
  * Bring back /usr/lib/llvm-3.3/lib/libclang.so (libclang-3.3-dev) and
    /usr/lib/llvm-3.3/lib/libclang.so.1 (libclang1-3.3)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 29 Oct 2013 13:49:59 +0100

llvm-toolchain-3.3 (1:3.3-11) unstable; urgency=low

  * Honor the option "nocheck"
  * Fix the detection of hurd (was failing i386) (Closes: #727157)

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 16 Oct 2013 18:10:17 +0200

llvm-toolchain-3.3 (1:3.3-10) unstable; urgency=low

  * Update of the description of LLVM packages
    (LLVM no longer mean Low Level Virtual Machine)
  * Disable the build of lldb under HURD
  * Ship the lldb headers into lldb-X.Y-dev (Closes: #723743)
    I might create a liblldb-X.Y library at some point but I think it is too
    early.
  * Fix "cannot compile this atomic library call"
    Thanks to Francisco Facioni for the refresh (Closes: #705115)
  * Install libclang.so in /usr/lib/*/libclang-3.3.so
  * Install libclang.so.1 in /usr/lib/*/libclang-3.3.so.1
  * Also ship the python clang binding (python-clang-3.3)
  * Fix a FTBFS with a duplicate declaration of shouldUseInlineAtomic
  * Build depend automake1.9 => automake (Closes: #724414)
  * Update the build dependency from tcl8.5 to tcl (Closes: #725953)